changes 20th March

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ D-i-m-i work done on mask icons
       <!-- <div class="container"> -->
       <div class="banner-text-and-video">
         <!-- <div class="banner-text col-sm-8 col-lg-8" style="width: 50%"> -->
-          <div class="embedded-video" style="width: 40%; float:right; max-width: 23vw; min-width: 200px; margin-left: 10px">
+          <div class="embedded-video" style="width: 40%; float:right; max-width: 20vw; min-width: 200px; margin-left: 30px; margin-right: 18px;
+          ">
             <!-- <img src="images/virus.jpg" alt="virus_illustration" style="height: 406px;"> -->
             <!-- <iframe width="90%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
             <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
@@ -108,7 +109,7 @@ D-i-m-i work done on mask icons
         <!-- model inputs -->
         <!-- <div style="display: flex; justify-content: start; flex-direction: column;"> -->
 
-          <div class="controls-card" style="height:fit-content; min-height: 226px; margin-top: 0px width: var(--room-cards-width);
+          <div class="controls-card" style="height:fit-content; min-height: 226px; margin-top: 0px; width: var(--room-cards-width);
           max-width: var(--room-cards-max-width); margin-bottom: 10px;">
             <div class="card-headings">
               <p class="h2-local">Ventilation</p>
@@ -657,7 +658,7 @@ D-i-m-i work done on mask icons
     <div style="display:flex; justify-content:center; margin-top: 20px">
       <div class="disclaimer" style="margin-top: 5px; font-weight: bold;">
         <span class="hovertext-disclaimer" style="font-weight: normal" text-hover="The results from this model, including the estimated infection risk, should be used with caution. Many of the inputs are uncertain due to a lack of data and the evolving nature of the virus. Furthermore, this model only calculates the risk of airborne transmission; it does not include the risk of short-range droplet transmission which can be minimized by social distancing. By using this webapp, you acknowledge its limitations and use it at the user’s own risk. To the fullest extent permitted by law, the authors of the website and app shall have no liability for any loss or damage suffered as a result of users’ use of or reliance on it.">
-          Disclaimer (hover over it to read)
+          Disclaimer
         </span>
       </div>
     </div>
