remove 1-ply mask option

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ D-i-m-i work done on mask icons
                 <label for="inf-mask">Mask worn</label>
                 <select id="inf-mask" name="inf-mask" class="dropdown-width" onchange="inf_mask_visual(); show_hide_custom_percent(this)">
                   <option value="0" selected> No mask</option>
-                  <option value="0.35"> 1-ply Cloth mask (35%)</option>
+                  <!-- <option value="0.35"> 1-ply Cloth mask (35%)</option> -->
                   <option value="0.5"> 3-ply Cloth mask (50%)</option>
                   <option value="0.59"> Surgical mask (59%)</option>
                   <option value="0.9"> N95/FFP2 mask (95%) </option>
